<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amiga_lidar</name>
  <version>0.0.1</version>
  <description>RPLidar launch and laser filter for Amiga robot</description>
  <maintainer email="cumaali.karaaslan51@gmail.com">cuma.karaaslan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>laser_filters</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
